# PathTracer

./: README.md
CPU/: pathtracer.pro
CPU/src/: la.h  mygl.cpp  src.pri  warpfunctions.cpp
CPU/src/integrators/: bidirectionalintegrator.cpp  bidirectionalintegrator.h  directlightingintegrator.cpp  fulllightingintegrator.cpp  photonmapper.cpp  photonmapper.h
CPU/src/raytracing/: intersection.cpp
CPU/src/scene/: camera.cpp  photon.h
CPU/src/scene/geometry/: cube.cpp  implicit.cpp  implicit.h  mesh.cpp  primitive.h  shape.h  squareplane.cpp
CPU/src/scene/lights/: diffusearealight.cpp  pointlight.h  spotlight.cpp
CPU/src/scene/materials/: bsdf.cpp  fresnel.cpp  microfacetbrdf.cpp  specularbrdf.cpp  specularbtdf.cpp
GPU/: main.cpp
GPU/src/: CMakeLists.txt  app.cpp  app.h  globals.cpp  globals.h  kernel.cl  la.h  main.cpp  pathtracer.cpp  pathtracer.h
GPU/src/ui/: ui.cpp  ui.h
assignment_package/: Makefile
assignment_package/forms/: mainwindow.ui
assignment_package/src/: mygl.h
assignment_package/src/integrators/: naiveintegrator.cpp
assignment_package/src/scene/: camera.cpp  jsonreader.cpp  kdtree.cpp  kdtree.h
assignment_package/src/scene/geometry/: disc.cpp  glshapecreation.cpp  primitive.cpp  shape.cpp
assignment_package/src/scene/lights/: diffusearealight.h  light.h  pointlight.cpp  spotlight.h
assignment_package/src/scene/materials/: bsdf.h  lambertbrdf.cpp
scene_files/: bidirectional.json  custom1.json  custom2.json  custom3.json  implicit_test.json  implicit_test2.json  implicit_test3.json  point_test.json  spot_test.json
